# ini2toml

./: .cirrus.yml  .coveragerc  .isort.cfg  .pre-commit-config.yaml  .projections.json  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  NOTICE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint_python.yml
docs/: conf.py  dev-guide.rst  index.rst  public_api_docs.py  setuptools_pep621.rst
docs/_static/: custom-adjustments.css
src/cfg2toml/: __init__.py  access.py  api.py  cli.py  extensions.py  lib.py  meta.py  processing.py  profile.py  skeleton.py  toml_adapter.py  transformations.py  translator.py  types.py
src/cfg2toml/extensions/: __init__.py  best_effort.py  coverage.py  isort.py  mypy.py  profile_independent_tasks.py  pytest.py  setuptools_pep621.py
src/cfg2toml/plugins/: __init__.py  best_effort.py  coverage.py  isort.py  mypy.py  pytest.py  setuptools_pep621.py
src/ini2toml/: __init__.py  __main__.py  api.py  base_translator.py  cli.py  errors.py  intermediate_repr.py  profile.py  toml_adapter.py  transformations.py  translator.py  types.py
src/ini2toml/drivers/: configparser.py  configupdater.py  full_toml.py  lite_toml.py  plain_builtins.py
src/ini2toml/plugins/: __init__.py  best_effort.py  coverage.py  isort.py  mypy.py  profile_independent_tasks.py  pytest.py  setuptools_pep621.py  toml_incompatibilities.py
tests/: conftest.py  test_access.py  test_cli.py  test_examples.py  test_intermediate_repr.py  test_lib.py  test_plugins.py  test_processing.py  test_skeleton.py  test_toml_adapter.py  test_transformations.py  test_translator.py
tests/drivers/: test_configparser.py  test_configupdater.py  test_full_toml.py  test_lite_toml.py  test_plain_builtins.py
tests/examples/aiohttp/: pyproject.toml  setup.cfg
tests/examples/django/: pyproject.toml
tests/examples/dynamic_extras/: pyproject.toml  setup.cfg
tests/examples/dynamic_extras_mixed/: pyproject.toml  setup.cfg
tests/examples/flask/: pyproject.toml
tests/examples/pandas/: pyproject.toml
tests/examples/pluggy/: pyproject.toml
tests/examples/plumbum/: pyproject.toml
tests/examples/pyscaffold/: LICENSE.txt  pyproject.toml  setup.cfg
tests/examples/setuptools_docs/: pyproject.toml  setup.cfg
tests/examples/setuptools_scm/: pyproject.toml
tests/examples/virtualenv/: pyproject.toml
tests/examples/zipp/: pyproject.toml
tests/extensions/: test_best_effort.py  test_coverage.py  test_isort.py  test_mypy.py  test_pytest.py  test_setuptools_pep621.py
tests/plugins/: test_best_effort.py  test_coverage.py  test_isort.py  test_mypy.py  test_profile_independent_tasks.py  test_pytest.py  test_setuptools_pep621.py  test_toml_incompatibilities.py
