# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/stable/userguide/declarative_config.html

[metadata]
name = ini2toml
description = Automatically conversion of .ini/.cfg files to TOML equivalents
author = Anderson Bravalheri
author_email = andersonbravalheri@gmail.com
license = MPL-2.0
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/abravalheri/ini2toml/
# Add here related links, for example:
project_urls =
    Documentation = https://ini2toml.readthedocs.io/
    Source = https://github.com/abravalheri/ini2toml
    Tracker = https://github.com/abravalheri/ini2toml/issues
    Changelog = https://ini2toml.readthedocs.io/en/latest/changelog.html
    Download = https://pypi.org/project/ini2toml/#files
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    packaging>=20.7


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ini2toml[PDF]` like:
# PDF = ReportLab; RXP
full =
    importlib-metadata; python_version<"3.8"
    configupdater>=3.0.1,<4
    tomlkit>=0.10.0,<2
    # atoml @ git+https://github.com/abravalheri/atoml@table-common-ancestor#egg=atoml
lite =
    importlib-metadata; python_version<"3.8"
    tomli-w>=0.4.0,<2
all =
    configupdater>=3.0.1,<4
    tomlkit>=0.10.0,<2
    # atoml @ git+https://github.com/abravalheri/atoml@table-common-ancestor#egg=atoml
    tomli-w>=0.4.0,<2
experimental =
    pyproject-fmt>=0.4.0; python_version>="3.7"

# Add here test requirements (semicolon/line-separated)
testing =
    isort
    setuptools
    tomli
    pytest
    pytest-cov
    pytest-xdist
    pytest-randomly
    validate-pyproject>=0.6,<2

typechecking =
    typing-extensions; python_version<"3.8"

[options.entry_points]
# Add here console scripts like:
console_scripts =
    ini2toml = ini2toml.cli:run
# For example:
# console_scripts =
#     fibonacci = ini2toml.skeleton:run
# And any other entry points, for example:
ini2toml.processing =
    setuptools_pep621 = ini2toml.plugins.setuptools_pep621:activate
    best_effort = ini2toml.plugins.best_effort:activate
    isort = ini2toml.plugins.isort:activate
    coverage = ini2toml.plugins.coverage:activate
    pytest = ini2toml.plugins.pytest:activate
    mypy = ini2toml.plugins.mypy:activate
    independent_tasks = ini2toml.plugins.profile_independent_tasks:activate
    toml_incompatibilities = ini2toml.plugins.toml_incompatibilities:activate

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov ini2toml --cov-report term-missing -vv
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[codespell]
skip = tests/examples/*

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503, W291
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_unused_ignores = True
# Add here plugins
# plugins = mypy_django_plugin.main, returns.contrib.mypy.returns_plugin

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.4
package = ini2toml
extensions =
    cirrus
    pre_commit
