[project]
name = "Django"
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "asgiref >= 3.3.2",
    "backports.zoneinfo; python_version<\"3.9\"",
    "sqlparse >= 0.2.2",
    "tzdata; sys_platform == 'win32'",
]

[[project.author]]
name = "Django Software Foundation"
email = "foundation@djangoproject.com"

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://www.djangoproject.com/"
Documentation = "https://docs.djangoproject.com/"
"Release notes" = "https://docs.djangoproject.com/en/stable/releases/"
Funding = "https://www.djangoproject.com/fundraising/"
Source = "https://github.com/django/django"
Tracker = "https://code.djangoproject.com/"

[project.optional-dependencies]
argon2 = ["argon2-cffi >= 19.1.0"]
bcrypt = ["bcrypt"]

[project.scripts]
django-admin = "django.core.management:execute_from_command_line"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "django.__version__"}

[tool.distutils.bdist_rpm]
doc-files = "docs extras AUTHORS INSTALL LICENSE README.rst"
install-script = "scripts/rpm-install.sh"

[tool.flake8]
exclude = "build,.git,.tox,./tests/.env"
ignore = "W504,W601"
max-line-length = "119"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["django"]
line_length = 79
multi_line_output = 5
