[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hello"
version = "42"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["dev-requirements.txt"]}
other = [
    "platformdirs",
    "rich",
]
