[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas"
description = "Powerful data structures for data analysis, time series, and statistics"
authors = [{name = "The Pandas Development Team", email = "pandas-dev@python.org"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.18.5",
    "python-dateutil>=2.8.1",
    "pytz>=2020.1",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://pandas.pydata.org"
"Bug Tracker" = "https://github.com/pandas-dev/pandas/issues"
Documentation = "https://pandas.pydata.org/pandas-docs/stable"
"Source Code" = "https://github.com/pandas-dev/pandas"

[project.entry-points.pandas_plotting_backends]
matplotlib = "pandas:plotting._matplotlib"

[project.optional-dependencies]
test = [
    "hypothesis>=5.5.3",
    "pytest>=6.0",
    "pytest-xdist>=1.31",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"*" = ["templates/*", "_libs/**/*.dll"]

[tool.setuptools.packages.find]
include = ["pandas", "pandas.*"]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
namespaces = false

[tool.distutils.build_ext]
inplace = true

[tool.versioneer]
vcs = "git"
style = "pep440"
versionfile_source = "pandas/_version.py"
versionfile_build = "pandas/_version.py"
tag_prefix = "v"
parentdir_prefix = "pandas-"

[tool.flake8]
max-line-length = "88"
ignore = """
# space before : (needed for how black formats slicing)
E203,
# line break before binary operator
W503,
# line break after binary operator
W504,
# module level import not at top of file
E402,
# do not assign a lambda expression, use a def
E731,
# found modulo formatter (incorrect picks up mod operations)
S001,
# controversial
B005,
# controversial
B006,
# controversial
B007,
# controversial
B008,
# setattr is used to side-step mypy
B009,
# getattr is used to side-step mypy
B010,
# tests use assert False
B011,
# tests use comparisons but not their returned value
B015,
# false positives
B301"""
exclude = """
doc/sphinxext/*.py,
doc/build/*.py,
doc/temp/*.py,
.eggs/*.py,
versioneer.py,
# exclude asv benchmark environments from linting
env"""
per-file-ignores = """
# private import across modules
pandas/tests/*:PDF020
# pytest.raises without match=
pandas/tests/extension/*:PDF009
# os.remove
doc/make.py:PDF008
# import from pandas._testing
pandas/testing.py:PDF014"""

[tool.flake8-rst]
max-line-length = "84"
bootstrap = """
import numpy as np
import pandas as pd
# avoiding error when importing again numpy or pandas
np
# (in some cases we want to do it to show users)
pd"""
ignore = """
# space before : (needed for how black formats slicing)
E203,
# module level import not at top of file
E402,
# line break before binary operator
W503,
# Classes/functions in different blocks can generate those errors
# expected 2 blank lines, found 0
E302,
# expected 2 blank lines after class or function definition, found 0
E305,
# We use semicolon at the end to avoid displaying plot objects
# statement ends with a semicolon
E703,
# comparison to none should be 'if cond is none:'
E711,"""
exclude = """
doc/source/development/contributing_docstring.rst,
# work around issue of undefined variable warnings
# https://github.com/pandas-dev/pandas/pull/38837#issuecomment-752884156
doc/source/getting_started/comparison/includes/*.rst"""

[tool.codespell]
ignore-words-list = "ba,blocs,coo,hist,nd,sav,ser"
ignore-regex = 'https://(\w+\.)+'

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "pandas/_typing.py",
    "pandas/_version.py",
]
plugins = ["Cython.Coverage"]
source = ["pandas"]

[tool.coverage.report]
ignore_errors = false
show_missing = true
omit = ["pandas/_version.py"]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    'if self\.debug',
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"
