[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "pluggy"
description = "plugin and hook calling mechanisms for python"
license = {text = "MIT"}
authors = [{name = "Holger Krekel", email = "holger@merlinux.eu"}]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
urls = {Homepage = "https://github.com/pytest-dev/pluggy"}
requires-python = ">=3.6"
dependencies = ['importlib-metadata>=0.12;python_version<"3.8"']
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
]
testing = [
    "pytest",
    "pytest-benchmark",
]

[tool.setuptools]
packages = ["pluggy"]
package-dir = {"" = "src"}
platforms = ["unix", "linux", "osx", "win32"]
include-package-data = false

[tool.devpi.upload]
formats = "sdist.tgz,bdist_wheel"
